--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
 asgiref==3.8.1
+certifi==2024.12.14
+charset-normalizer==3.4.1
 Django==5.1.4
+django-autoslug==1.9.9
+django-tinymce==4.1.0
+gunicorn==23.0.0
+idna==3.10
+packaging==24.2
+requests==2.32.3
 sqlparse==0.5.3
 tzdata==2024.2
-
+urllib3==2.3.0
+vercel==0.2.1
